# fast-cache-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh.md  conanfile.py  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: ci.yml
cmake/: fast_cache_engineConfig.cmake.in
docs/: API.md  API.zh.md  BACKENDS.md  BACKENDS.zh.md  CODECS.md  CODECS.zh.md  FILE_FORMAT.md  FILE_FORMAT.zh.md  PACKAGING.md  PACKAGING.zh.md  PUBLISHING.md  QUICK_START.md  QUICK_START.zh.md
include/: fce_builder.h  fce_cache.h  fce_error.h  fce_reader.h  fce_schema.h
python/: fast_cache_engine.py
python/fast_cache_engine/: __init__.py
src/api/: fce_builder_api.c  fce_reader_api.c
src/backends/: fce_backend_direct.c  fce_backend_log.c  fce_backend_mph.c  fce_backend_radix.c  fce_backend_sorted.c
src/cli/: fce_cli.c
src/codecs/: fce_codecs.c
src/core/: fce_build_records.c  fce_crc.c  fce_file.c  fce_hash.c  fce_manifest.c  fce_memory.c  fce_planner.c  fce_schema.c  fce_version.c
src/internal/: fce_arena.h  fce_internal.h
